# tray-hook

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: basic.js
npm/tray-hook/: index.d.ts  index.js  package.json
npm/tray-hook-darwin-arm64/: package.json
npm/tray-hook-darwin-x64/: package.json
npm/tray-hook-linux-arm64/: package.json
npm/tray-hook-linux-x64/: package.json
npm/tray-hook-win32-arm64/: package.json
npm/tray-hook-win32-x64/: package.json
src/: main.rs
