[package]
name = "tray-hook"
version = "0.1.0"
edition = "2024"

[dependencies]
image      = "0.25.9"
muda       = "0.17.1"
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tao        = "0.34.5"
tray-icon  = "0.21.3"
base64     = "0.22.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
